--- a/basic.html
+++ b/basic.html
@@ -14,7 +14,7 @@
             <li>  <input type="password" placeholder="password" name="password"/>
             <li>  <input type="button" value="submit"/></li>
             <li> <input type="File" name="file"/></li>
-            <li> <input type="number" placeholder="age" name="age"/></li>
+            <li> <input type="age" placeholder="age" name="age"/></li>
             <li> <input type="checkbox" />HTML</li>
             <li> <input type="checkbox"/>CSS</li>
             <li><input type="radio"/>Male</li>
