Zoom in Zoom out image

--- a/CSS.Basic/Exercise/imageStyle/Image.html
+++ b/CSS.Basic/Exercise/imageStyle/Image.html
@@ -6,6 +6,8 @@
     <body>
         <div class="main">
         <div class="image">
+            <button type="submit">Login</button>
+            <div>Login</div>
             <img>
             
         </div>
